<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>webadmin-modules</artifactId>
    <groupId>org.ovirt.engine.ui</groupId>
    <version>3.0.0-0001</version>
  </parent>

  <artifactId>userportal</artifactId>
  <packaging>war</packaging>

  <name>UserPortal</name>
  <description>oVirt Engine User Portal GUI</description>

  <properties>
    <!--  tell the compiler we can use 1.6 -->
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
    <!-- Hack until module inheritance will be fixed -->
    <smartgwt.version>2.2</smartgwt.version>
    <!--This can be overidded by setting this property in your personal settings.xml-->
    <gwt-plugin.extraJvmArgs>${aspectj.agent} -Xms1024M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M ${gwt.dontPrune}</gwt-plugin.extraJvmArgs>

    <!-- Activate load time weaving of the aspects -->
    <aspectj.agent>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar</aspectj.agent>
    <!-- Regular expression that matches the types that the GWT compiler shouldn't  prune -->
    <gwt.dontPrune>-Dgwt.dontPrune=org\.ovirt\.engine\.core\.(common|compat)\..*</gwt.dontPrune>
    <gwt.version>2.3.0</gwt.version>
  </properties>

  <dependencies>
    <!-- Internal modules dependencies -->

    <!-- GWT dependencies (from central repo) -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.smartgwt</groupId>
      <artifactId>smartgwt</artifactId>
      <version>${smartgwt.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>${engine.groupId}</groupId>
      <artifactId>uicommon</artifactId>
      <version>${engine.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>${engine.groupId}</groupId>
      <artifactId>genericapi</artifactId>
      <version>${engine.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>${engine.groupId}</groupId>
      <artifactId>sharedgwt</artifactId>
      <version>${engine.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>${engine.groupId}</groupId>
      <artifactId>frontend</artifactId>
      <version>${engine.version}</version>
    </dependency>

    <dependency>
      <groupId>${engine.groupId}</groupId>
      <artifactId>gwt-extension</artifactId>
      <version>${engine.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.1</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.spec.javax.ejb</groupId>
      <artifactId>jboss-ejb-api_3.1_spec</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
      <scope>provided</scope>
      <version>${aspectj.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <packagingExcludes>WEB-INF/classes/**</packagingExcludes>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>gwt-user</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>gwt-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>compile</goal>
                  <!--<goal>test</goal>-->
                </goals>
              </execution>
            </executions>
            <configuration>
              <logLevel>INFO</logLevel>
              <style>OBF</style>
              <gwtVersion>${gwt.version}</gwtVersion>
              <runTarget>userportal/UserPortal.html</runTarget>
              <extraJvmArgs>${gwt-plugin.extraJvmArgs}</extraJvmArgs>
              <copyWebapp>true</copyWebapp>
              <compileSourcesArtifacts>
                <compileSourcesArtifact>${engine.groupId}:gwt-extension</compileSourcesArtifact>
                <compileSourcesArtifact>${engine.groupId}:uicommon</compileSourcesArtifact>
              </compileSourcesArtifacts>
            </configuration>
            <dependencies>
              <!-- Add gwt-extension aspjects to the GWT compiler classpath -->
              <dependency>
              	<groupId>com.google.gwt</groupId>
                <artifactId>gwt-user</artifactId>
                <version>${gwt.version}</version>
              </dependency>
              <dependency>
              	<groupId>com.google.gwt</groupId>
                <artifactId>gwt-dev</artifactId>
                <version>${gwt.version}</version>
              </dependency>
              <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-servlet</artifactId>
                <version>${gwt.version}</version>
              </dependency>
              <dependency>
              	<groupId>${engine.groupId}</groupId>
              	<artifactId>gwt-extension</artifactId>
              	<version>${engine.version}</version>
              </dependency>
              
            </dependencies>
          </plugin>
          <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>2.4.1</version>
            <configuration>
              <excludeDefaultDirectories>true</excludeDefaultDirectories>
              <filesets>
                <fileset>
                  <directory>${project.basedir}/target/${artifactId}-${version}/org.ovirt.engine.ui.userportal.UserPortal/sc/system/helpers</directory>
                    <includes>
                      <include>isomorphic_applets.jar</include>
                    </includes>
                </fileset>
            </filesets>
		  </configuration>
		  <executions>
		    <execution>
		      <id>auto-clean</id>
		      <phase>prepare-package</phase>
		      <goals>
		        <goal>clean</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>
	  </plugins>
	</build>
  </profile>

    <profile>
      <id>gwtdev</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>add-source</id>
                <phase>generate-sources</phase>
                <goals>
                  <goal>add-source</goal>
                </goals>
                <configuration>
                  <sources>
                    <source>../uicommon/src/main/java</source>
                    <source>../gwt-extension/src/main/java</source>
                    <source>../frontend/src/main/java</source>
                  </sources>
                </configuration>
              </execution>
              <execution>
                <id>add-resource</id>
                <phase>generate-sources</phase>
                <goals>
                  <goal>add-resource</goal>
                </goals>
                <configuration>
                  <resources>
                    <resource>
                      <directory>../uicommon/src/main/resources</directory>
                      <directory>../gwt-extension/src/main/resources</directory>
                      <directory>../frontend/src/main/resources</directory>
                      <targetPath>resources</targetPath>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
